--- a/css/less/index.less
+++ b/css/less/index.less
@@ -53,25 +53,30 @@ h2::before{
     text-align: center;
     padding: 15px;
     padding-bottom: 1.45rem;
-    .con-header{
-      .con-major{
-        padding: 0 20px;
-        p{
-          text-align: left;
-          font-size: 0.8rem;
-          line-height: 1.5rem;
-        }
-        .con-list{
-          width: 48%;
-          &.fl{
-            border-right:3px solid #eee;
-            p{
-              line-height: 2rem;
-            }
+    .con-major{
+      padding: 0 20px;
+      p{
+        text-align: left;
+        font-size: 0.8rem;
+        line-height: 1.5rem;
+      }
+      .con-list{
+        width: 48%;
+        &.fl{
+          border-right:3px solid #eee;
+          p{
+            line-height: 2rem;
           }
         }
       }
     }
+  }
+  .ability{
+    background-color: #bdb4f4;
+    color: #eee;
+    text-align: center;
+    padding: 15px;
+    padding-bottom: 1.45rem;
   }
   .project{
     background-color: #f19ec2;
@@ -100,6 +105,15 @@ h2::before{
     }
     .pro-two{
       background-color: #02d8c0;
+    }
+    .pro-three{
+      background-color: #ffcd00;
+      color: #eee;
+      img{
+        width: 25%;
+        padding-top: 25px;
+        margin-left: 5px;
+      }
     }
   }
 }
