--- a/css/index.css
+++ b/css/index.css
@@ -146,14 +146,23 @@ h2::before {
   line-height: 2rem;
 }
 .main .ability {
-  background-color: #bdb4f4;
+  background-color: #f19ec2;
   color: #eee;
   text-align: center;
   padding: 15px;
   padding-bottom: 1.45rem;
 }
+.main .ability .abi-major span {
+  display: inline-block;
+  border: 1px solid #eee;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: #eee;
+  color: #f19ec2;
+  margin-bottom: 20px;
+}
 .main .project {
-  background-color: #f19ec2;
+  background-color: #bdb4f4;
   color: #eee;
   text-align: center;
   padding-top: 15px;
@@ -176,17 +185,33 @@ h2::before {
   text-align: left;
 }
 .main .project .pro-one {
-  background-color: #f19ec2;
+  background-color: #bdb4f4;
 }
 .main .project .pro-two {
   background-color: #02d8c0;
 }
 .main .project .pro-three {
-  background-color: #ffcd00;
+  background-color: #fed5b3;
   color: #eee;
 }
 .main .project .pro-three img {
   width: 25%;
   padding-top: 25px;
   margin-left: 5px;
+}
+.main .foot {
+  background-color: #0ea6e5;
+}
+.main .foot h2 {
+  margin: 0;
+  padding: 0.83em 0;
+  text-align: center;
+  color: #eee;
+  position: relative;
+}
+.main .foot h2::after,
+.main .foot h2::before {
+  content: '';
+  position: absolute;
+  height: 0;
 }
