--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,14 @@ h2::before {
 }
 .main .content .con-major .con-list.fl p {
   line-height: 2rem;
-  overflow: hidden;
+}
+@media only screen and (max-width: 414px) {
+  .main .content .con-major .con-list {
+    width: 100%;
+  }
+  .main .content .con-major i {
+    display: none;
+  }
 }
 .main .ability {
   background-color: #f19ec2;
@@ -263,4 +270,13 @@ h2::before {
 }
 .main .foot .foot-icon p .icon.icon-mail {
   background-position: -50px 0;
+}
+@media only screen and (max-width: 414px) {
+  .main .foot .foot-icon {
+    width: 80%;
+  }
+  .main .foot .foot-icon .fl,
+  .main .foot .foot-icon .fr {
+    width: 100%;
+  }
 }
