--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,7 @@ h2::before {
   text-align: left;
 }
 .main .project .pro-one {
-  background-color: #bdb4f4;
+  background-color: #fce5e0;
 }
 .main .project .pro-two {
   background-color: #02d8c0;
