--- a/css/less/index.less
+++ b/css/less/index.less
@@ -136,7 +136,7 @@ h2::before{
       }
     }
     .pro-one{
-      background-color: #bdb4f4;      
+      background-color: #fce5e0;      
     }
     .pro-two{
       background-color: #02d8c0;
