--- a/css/less/index.less
+++ b/css/less/index.less
@@ -110,7 +110,7 @@ h2::before{
     }
   }
   .project{
-    background-color: #bdb4f4;
+    background-color: #bb73f9;
     color: #eee;
     text-align: center;
     padding-top: 15px;
@@ -120,9 +120,10 @@ h2::before{
       width: 100%;
       margin: 0 auto;
       padding-bottom: 35px;
-      color: #7b7b7b;
+      // color: #7b7b7b;
+      color: #fff;
       a{
-        color: #7b7b7b;
+        color: #fff;
       }
       img{
         width: 80%;
@@ -136,13 +137,13 @@ h2::before{
       }
     }
     .pro-one{
-      background-color: #fce5e0;      
+      background-color: #f3b61d;      
     }
     .pro-two{
       background-color: #02d8c0;
     }
     .pro-three{
-      background-color: #fed5b3;
+      background-color: #9617f4;
       // color: #eee;
       img{
         width: 100%;
